# onetheroadagain

./: .gitignore  README.md  pyproject.toml  smithery.yaml
.github/workflows/: verify.yml
scripts/: demo_user_session.py  probe_live.py  scheduled_briefing.py  verify_end_to_end.py
src/israel_transit_mcp/: aggregator.py  keywords.py
src/israel_transit_mcp/sources/: google_routes.py  web_crawler.py
src/israel_transit_mcp/sources/crawlers/: __init__.py  mivzakim.py
src/israel_transit_mcp/store/: baselines.py  db.py
src/israel_transit_mcp/tools/: __init__.py  best_way.py  morning_briefing.py  plan_route.py
