[project]
name = "israel-transit-mcp"
version = "0.0.1"
description = "MCP server for live Israeli public-transit + driving route planning, with anomaly detection against a personal commute baseline."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.4",
    "pydantic>=2.6",
    "httpx>=0.27",
    "python-dateutil>=2.9",
    "rich>=13.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
transit = [
    "gtfs-kit>=10.0",
    "open-bus-stride-client>=0.1",
    "israel-rail-api>=0.1",
]
weather = [
    "weatheril>=0.0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
israel-transit-mcp = "israel_transit_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/israel_transit_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/israel_transit_mcp/prompts" = "israel_transit_mcp/prompts"
